--- a/template.tex
+++ b/template.tex
@@ -5,5 +5,20 @@
 \rhead{number\\name}
 \lhead{title}
 \cfoot{\thepage{}}
+
+\usepackage{mathtools}
+
+\newcommand{\bracket}[3]{\left#1#3\right#2}
+\newcommand{\abracket}[1]{\bracket{(}{)}{#1}}
+\newcommand{\bbracket}[1]{\bracket{[}{]}{#1}}
+\newcommand{\ebracket}[1]{\bracket{\{}{\}}{#1}}
+\newcommand{\cmat}[4][c]{\bracket{#2}{#3}{\begin{matrix*}[#1]#4\end{matrix*}}}
+\newcommand{\camat}[2][c]{\cmat{(}{)}{#1}}
+\newcommand{\cbmat}[2][c]{\cmat{[}{]}{#1}}
+\newcommand{\cemat}[2][c]{\cmat{\{}{\}}{#1}}
+\newcommand{\nint}[1]{\int^#1_{-#1}}
+\newcommand{\pint}{\nint{\pi}}
+
 \begin{document}
 \end{document}
+
