ヘッダー、フッターを設定

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,4 +1,9 @@
 \documentclass[dvipdfmx]{jsarticle}
 \usepackage[top=20truemm,bottom=10truemm,left=10truemm,right=10truemm]{geometry}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\rhead{number\\name}
+\lhead{title}
+\cfoot{\thepage{}}
 \begin{document}
 \end{document}
