--- a/template/preamble.tex
+++ b/template/preamble.tex
@@ -6,6 +6,7 @@
 \lhead{title}
 \cfoot{\thepage{}}
 
+\usepackage{subfiles}
 \usepackage{mathtools}
 
 \newcommand{\bracket}[3]{\left#1#3\right#2}
@@ -18,7 +19,3 @@
 \newcommand{\cemat}[2][c]{\cmat{\{}{\}}{#1}}
 \newcommand{\nint}[1]{\int^#1_{-#1}}
 \newcommand{\pint}{\nint{\pi}}
-
-\begin{document}
-\end{document}
-
