--- a/template/preamble.tex
+++ b/template/preamble.tex
@@ -1,12 +1,19 @@
 \documentclass[dvipdfmx]{jsarticle}
+
+% 余白設定
 \usepackage[top=20truemm,bottom=10truemm,left=10truemm,right=10truemm]{geometry}
+
+% ヘッダー、フッター設定
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \rhead{number\\name}
 \lhead{title}
 \cfoot{\thepage{}}
 
+% subfile を使用可能に
 \usepackage{subfiles}
+
+% align 環境を使用可能に
 \usepackage{mathtools}
 
 \newcommand{\bracket}[3]{\left#1#3\right#2}
