--- a/preamble.tex
+++ b/preamble.tex
@@ -1,3 +1,4 @@
 \documentclass[dvipdfmx]{jsarticle}
+\usepackage[top=20truemm,bottom=10truemm,left=10truemm,right=10truemm]{geometry}
 \begin{document}
 \end{document}
